--- a/maven.html
+++ b/maven.html
@@ -9,7 +9,7 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;2.1.3&lt;/version&gt;
+        &lt;version&gt;2.1.4&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
@@ -19,5 +19,9 @@ title: Maven
 <pre>        &lt;artifactId&gt;glimpse-extras-spacenav&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-swt&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-examples&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;glimpse-extras-worldwind&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;docking&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;docking-examples&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;platform-fixes&lt;/artifactId&gt;</pre>
 
 <p>All the <i>non-extras</i> modules are available directly from <a href="http://search.maven.org/#browse%7C1117099642">Maven Central</a>.
