Update for Glimpse 2.3.0

--- a/maven.html
+++ b/maven.html
@@ -9,7 +9,7 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;2.2.0&lt;/version&gt;
+        &lt;version&gt;2.4.0&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
@@ -24,4 +24,4 @@ title: Maven
 <pre>        &lt;artifactId&gt;docking-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;platform-fixes&lt;/artifactId&gt;</pre>
 
-<p>All the <i>non-extras</i> modules are available directly from <a href="http://search.maven.org/#browse%7C1117099642">Maven Central</a>.
+<p>All the modules are available directly from <a href="http://search.maven.org/#browse%7C1117099642">Maven Central</a>.
