Update webpage to version 3.0.0

--- a/maven.html
+++ b/maven.html
@@ -9,14 +9,14 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;2.5.0&lt;/version&gt;
+        &lt;version&gt;3.0.0&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
 <p>The <i>full</i> Glimpse release contains a number of modules which add additional features (and usually additional third-party dependencies) to Glimpse. Each has its own Maven artifact:</p>
+<pre>        &lt;artifactId&gt;glimpse-extras-dnc&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-charts&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-dspl&lt;/artifactId&gt;</pre>
-<pre>        &lt;artifactId&gt;glimpse-extras-spacenav&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-swt&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-worldwind&lt;/artifactId&gt;</pre>
@@ -24,4 +24,4 @@ title: Maven
 <pre>        &lt;artifactId&gt;docking-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;platform-fixes&lt;/artifactId&gt;</pre>
 
-<p>All the modules are available directly from <a href="http://search.maven.org/#browse%7C1117099642">Maven Central</a>.
+<p>All the modules are available directly from <a href="http://search.maven.org/#search%7Cga%7C1%7Ccom.metsci.glimpse">Maven Central</a>.
