--- a/requirements.html
+++ b/requirements.html
@@ -4,5 +4,5 @@ title: Requirements
 ---
 <h2>Requirements</h2>
 
-<p>Glimpse requires <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java 1.7.0</a>. Other software dependencies are included with binary distributions or available using <a href="http://maven.apache.org">Maven</a>. A wide range of modern graphics cards with OpenGL 2.0 compatibility will work with Glimpse (although OpenGL 3.0 is necessary for some advanced features).</p>
+<p>Glimpse requires <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java 1.7.0</a>. Other software dependencies are included with binary distributions or available using <a href="http://maven.apache.org">Maven</a>. A wide range of modern graphics cards with OpenGL 3.2 compatibility will work with Glimpse.</p>
 
