--- a/maven.html
+++ b/maven.html
@@ -9,7 +9,7 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;3.0.0&lt;/version&gt;
+        &lt;version&gt;3.1.0&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
@@ -22,6 +22,12 @@ title: Maven
 <pre>        &lt;artifactId&gt;glimpse-extras-worldwind&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;docking&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;docking-examples&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;layers&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;layers-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;platform-fixes&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;wizard&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;wizard-examples&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;text&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;util&lt;/artifactId&gt;</pre>
 
 <p>All the modules are available directly from <a href="http://search.maven.org/#search%7Cga%7C1%7Ccom.metsci.glimpse">Maven Central</a>.
