Update to glimpse 4.0.0

--- a/maven.html
+++ b/maven.html
@@ -9,24 +9,20 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;3.2.0&lt;/version&gt;
+        &lt;version&gt;4.0.0&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
 <p>The <i>full</i> Glimpse release contains a number of modules which add additional features (and usually additional third-party dependencies) to Glimpse. Each has its own Maven artifact:</p>
 <pre>        &lt;artifactId&gt;glimpse-extras-dnc&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-charts&lt;/artifactId&gt;</pre>
-<pre>        &lt;artifactId&gt;glimpse-extras-dspl&lt;/artifactId&gt;</pre>
-<pre>        &lt;artifactId&gt;glimpse-extras-swt&lt;/artifactId&gt;</pre>
+<pre>        &lt;artifactId&gt;glimpse-extras-topo&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-examples&lt;/artifactId&gt;</pre>
-<pre>        &lt;artifactId&gt;glimpse-extras-worldwind&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;docking&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;docking-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;layers&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;layers-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;platform-fixes&lt;/artifactId&gt;</pre>
-<pre>        &lt;artifactId&gt;wizard&lt;/artifactId&gt;</pre>
-<pre>        &lt;artifactId&gt;wizard-examples&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;text&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;util&lt;/artifactId&gt;</pre>
 
